# zcash-light-client-ffi

releases/XCFramework/libzcashlc.xcframework/ios-arm64/libzcashlc.framework/Headers/: zcashlc.h
releases/XCFramework/libzcashlc.xcframework/ios-arm64_x86_64-simulator/libzcashlc.framework/Headers/: zcashlc.h
rust/: Cargo.toml
rust/src/: lib.rs
